:rocket: release minify version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "devDependencies": {
     "browser-sync": "^2.27.7",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0"
+  },
+  "dependencies": {
+    "gulp-rename": "^2.0.0",
+    "gulp-uglify-es": "^3.0.0"
   }
 }
