--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "gulp-rename": "^2.0.0",
-    "gulp-uglify-es": "^3.0.0"
+    "gulp-replace": "^1.1.3",
+    "gulp-uglify-es": "^3.0.0",
+    "readline-sync": "^1.4.10"
   }
 }
