--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "scripts": {
     "dev": "webpack serve --config config/webpack.dev.js",
     "build": "cross-env ENTRY=dev webpack --config config/webpack.build.js",
-    "sass:compressed": "sass src/_style.scss:dist/easy-select.css --no-source-map",
-    "optimize": "csso dist/easy-select.css --output dist/easy-select.min.css --stat",
+    "sass:compressed": "sass src/_style.scss:dist/easy-popup.css --no-source-map",
+    "optimize": "csso dist/easy-popup.css --output dist/easy-popup.min.css --stat",
     "output-css": "npm run sass:compressed && npm run optimize",
     "prod": "webpack --config config/webpack.prod.js && cross-env TARGET=module webpack --config config/webpack.prod.js && npm run output-css",
     "publish": "npm run prod & npm publish"
