--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "honcau": "^0.0.2"
   }
 }
