--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
     "csso-cli": "^4.0.1",
+    "honcau": "^0.0.2",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.2",
@@ -55,8 +56,5 @@
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
     "webpack-merge": "^5.8.0"
-  },
-  "dependencies": {
-    "honcau": "^0.0.2"
   }
 }
