--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.2",
+    "piajs": "^0.0.3",
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.43.5",
