--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "@phucbm/os-util": "^0.0.4"
   }
 }
