build: prod unminified js

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "outputFilename": "easy-popup",
   "prettyName": "Easy Popup",
   "codeName": "EasyPopup",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Super light-weight JavaScript library to create a simple popup",
   "homepage": "https://github.com/viivue/easy-popup",
   "repository": {
@@ -29,7 +29,10 @@
     "sass:compressed": "sass src/_style.scss:dist/easy-popup.css --no-source-map",
     "optimize": "csso dist/easy-popup.css --output dist/easy-popup.min.css --stat",
     "output-css": "npm run sass:compressed && npm run optimize",
-    "prod": "webpack --config config/webpack.prod.js && npm run output-css",
+    "prod-umd": "cross-env TARGET=umd webpack --config config/webpack.prod.js",
+    "prod-umd-min": "cross-env TARGET=umd MIN=yes webpack --config config/webpack.prod.js",
+    "prod-module": "cross-env TARGET=module MIN=yes webpack --config config/webpack.prod.js",
+    "prod": "npm run prod-umd && npm run prod-umd-min && npm run output-css",
     "publish": "npm run prod & npm publish"
   },
   "devDependencies": {
