--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
     "csso-cli": "^4.0.1",
-    "honcau": "^0.0.2",
+    "honcau": "^0.0.3",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.2",
@@ -56,6 +56,7 @@
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.43.5",
     "sass-loader": "^12.2.0",
+    "showdown": "^2.1.0",
     "style-loader": "^3.3.0",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.58.2",
@@ -64,6 +65,6 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@phucbm/os-util": "^0.0.4"
+    "@phucbm/os-util": "0.0.5"
   }
 }
