--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
     "csso-cli": "^4.0.1",
+    "github-markdown-css": "^5.2.0",
     "honcau": "^0.0.3",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.3.2",
