--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "honcau": "^0.0.3",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.3.2",
+    "markdown-loader": "^8.0.0",
     "mini-css-extract-plugin": "^2.4.2",
     "piajs": "^0.0.3",
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.43.5",
     "sass-loader": "^12.2.0",
-    "showdown": "^2.1.0",
     "style-loader": "^3.3.0",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.58.2",
