--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "outputFilename": "easy-popup",
   "prettyName": "Easy Popup",
   "codeName": "EasyPopup",
-  "version": "1.0.0-staging",
+  "version": "1.1.0",
   "description": "Super light-weight JavaScript library to create a simple popup",
   "homepage": "https://easy-popup.netlify.app/",
   "repository": {
